chat proof of concept

--- a/lib/index.html
+++ b/lib/index.html
@@ -6,6 +6,8 @@
   <title>AcidBurn.video</title>
   <style type="text/css">
     body {
+      color: green;
+      background-color: black;
       margin: 0;
       padding: 0;
     }
