Typescript and learn some sagas

--- a/lib/index.html
+++ b/lib/index.html
@@ -54,35 +54,6 @@
 </head>
 
 <body>
-  <div id="container" ondrop="dropHandler(event)" ondragover="dragOverHandler(event)">
-    <div id="form-wrapper">
-      <form>
-        <input type="text" id="hash" placeholder="Hash" disabled />
-        <button id="gobutton" disabled>Watch!</button>
-      </form>
-      <video id="video" controls></video>
-    </div>
-    <pre id="output" style="display: inline-block"></pre>
-  </div>
-
-  OTV - ARPS
-
-  Automated
-  Record
-  Playback
-  System
-
-
-  ZEROCOOL / CRASH OVERRIDE
-  ACID BURN
-  cyberdelia
-
-  Most common used passwords
-  love
-  secret
-  sex
-  god
-
-</body>
+  <div id="app"></div>
 
 </html>
